Add missing implementation for "OrNot" (which was not properly written or read as a consequence)

BUG: 185106

svn path=/branches/extragear/graphics/digikam/0.11/; revision=929572